JEI refactoring.