@@ -6,27 +6,25 @@ import cofh.thermal.core.util.recipes.device.TreeExtractorMapping;
 import cofh.thermal.lib.compat.jei.Drawables;
 import com.mojang.blaze3d.vertex.PoseStack;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.IRecipeLayout;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.gui.drawable.IDrawableAnimated;
 import mezz.jei.api.gui.drawable.IDrawableStatic;
-import mezz.jei.api.gui.ingredient.IGuiFluidStackGroup;
-import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
+import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
 import mezz.jei.api.helpers.IGuiHelper;
-import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.RecipeIngredientRole;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
-import net.minecraftforge.fluids.FluidStack;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static cofh.lib.util.constants.Constants.TANK_MEDIUM;
 import static cofh.lib.util.helpers.StringHelper.getTextComponent;
-import static cofh.thermal.core.compat.jei.TCoreJeiPlugin.*;
+import static cofh.thermal.core.compat.jei.TCoreJeiPlugin.defaultFluidTooltip;
+import static cofh.thermal.core.compat.jei.TCoreJeiPlugin.tankSize;
 import static cofh.thermal.core.init.TCoreReferences.DEVICE_TREE_EXTRACTOR_BLOCK;
 
 public class TreeExtractorCategory implements IRecipeCategory<TreeExtractorMapping> {
@@ -44,7 +42,7 @@ public class TreeExtractorCategory implements IRecipeCategory<TreeExtractorMappi
     public TreeExtractorCategory(IGuiHelper guiHelper, ItemStack icon, ResourceLocation uid) {
 
         this.uid = uid;
-        this.icon = guiHelper.createDrawableIngredient(icon);
+        this.icon = guiHelper.createDrawableIngredient(VanillaTypes.ITEM, icon);
 
         background = guiHelper.drawableBuilder(DeviceTreeExtractorScreen.TEXTURE, 86, 11, 80, 62)
                 .addPadding(0, 0, 16, 68)
@@ -89,46 +87,26 @@ public class TreeExtractorCategory implements IRecipeCategory<TreeExtractorMappi
     }
 
     @Override
-    public void setIngredients(TreeExtractorMapping recipe, IIngredients ingredients) {
+    public void setRecipe(IRecipeLayoutBuilder builder, TreeExtractorMapping recipe, IFocusGroup focuses) {
 
-        ArrayList<ItemStack> inputItems = new ArrayList<>();
-        inputItems.add(new ItemStack(recipe.getTrunk()));
-        inputItems.add(new ItemStack(recipe.getLeaves()));
+        ItemStack trunk = new ItemStack(recipe.getTrunk());
+        ItemStack leaves = new ItemStack(recipe.getLeaves());
 
-        ingredients.setInputs(VanillaTypes.ITEM, inputItems);
-        ingredients.setOutputs(VanillaTypes.FLUID, Collections.singletonList(recipe.getFluid()));
+        builder.addSlot(RecipeIngredientRole.INPUT, 35, 41).addItemStack(trunk);
+        builder.addSlot(RecipeIngredientRole.INPUT, 35, 23).addItemStack(trunk);
+        builder.addSlot(RecipeIngredientRole.INPUT, 17, 14).addItemStack(leaves);
+        builder.addSlot(RecipeIngredientRole.INPUT, 35, 5).addItemStack(leaves);
+        builder.addSlot(RecipeIngredientRole.INPUT, 53, 14).addItemStack(leaves);
+
+        builder.addSlot(RecipeIngredientRole.OUTPUT, 116, 11)
+                .addIngredients(VanillaTypes.FLUID, List.of(recipe.getFluid()))
+                .setFluidRenderer(tankSize(TANK_MEDIUM), false, 16, 40)
+                .setOverlay(tankOverlay, 0, 0)
+                .addTooltipCallback(defaultFluidTooltip());
     }
 
     @Override
-    public void setRecipe(IRecipeLayout layout, TreeExtractorMapping recipe, IIngredients ingredients) {
-
-        List<List<ItemStack>> inputs = ingredients.getInputs(VanillaTypes.ITEM);
-        List<List<FluidStack>> outputs = ingredients.getOutputs(VanillaTypes.FLUID);
-
-        IGuiItemStackGroup guiItemStacks = layout.getItemStacks();
-        IGuiFluidStackGroup guiFluidStacks = layout.getFluidStacks();
-
-        guiFluidStacks.init(0, false, 116, 11, 16, 40, tankSize(TANK_MEDIUM), false, tankOverlay(tankOverlay));
-
-        guiItemStacks.init(0, true, 34, 40);
-        guiItemStacks.init(1, true, 34, 22);
-        guiItemStacks.init(2, true, 16, 13);
-        guiItemStacks.init(3, true, 34, 4);
-        guiItemStacks.init(4, true, 52, 13);
-
-        guiItemStacks.set(0, inputs.get(0));
-        guiItemStacks.set(1, inputs.get(0));
-        guiItemStacks.set(2, inputs.get(1));
-        guiItemStacks.set(3, inputs.get(1));
-        guiItemStacks.set(4, inputs.get(1));
-
-        guiFluidStacks.set(0, outputs.get(0));
-
-        addDefaultFluidTooltipCallback(guiFluidStacks);
-    }
-
-    @Override
-    public void draw(TreeExtractorMapping recipe, PoseStack matrixStack, double mouseX, double mouseY) {
+    public void draw(TreeExtractorMapping recipe, IRecipeSlotsView recipeSlotsView, PoseStack matrixStack, double mouseX, double mouseY) {
 
         tankBackground.draw(matrixStack, 115, 10);
 
